--- a/PS1_Shakespeare.ipynb
+++ b/PS1_Shakespeare.ipynb
@@ -38,8 +38,7 @@
     "import requests\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import cross_validate,LeaveOneOut\n",
-    "import numpy as np\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "import numpy as np"
    ]
   },
   {
@@ -91,10 +90,13 @@
     "\n",
     "# This function should create a feature representation using all tokens that\n",
     "# contain an alphabetic character.\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
     "def createBasicFeatures(corpus):\n",
     "  #sparse matrix\n",
     "  corpus_text = [item['text'] for item in corpus]\n",
-    "  Vectorizer = CountVectorizer(analyzer = 'word', token_pattern=r'\\b[a-zA-Z]+\\b')\n",
+    "  Vectorizer = CountVectorizer(analyzer = 'word', token_pattern='[a-zA-Z]+')\n",
     "  texts = Vectorizer.fit_transform(corpus_text).toarray()\n",
     "  #correct class: y\n",
     "  genres = [item['genre'] for item in corpus]\n",
@@ -108,6 +110,7 @@
     "def createInterestingFeatures(corpus):\n",
     "  #sparse matrix: X\n",
     "  corpus_text = [item['text'] for item in corpus]\n",
+    "#using bigram, stopwords to improve the accuracy(accurcy of L1 improves obviously)\n",
     "  Bigram_Vectorizer = CountVectorizer(stop_words='english', ngram_range=(2, 2), \n",
     "                                      token_pattern=r'\\b[a-zA-Z][a-zA-Z]+\\b', min_df=2)\n",
     "  texts = Bigram_Vectorizer.fit_transform(corpus_text).toarray()\n",
@@ -208,8 +211,8 @@
      "text": [
       "----------L1 Norm-----------\n",
       "The model's average accuracy is 0.615385\n",
-      "The most informative terms for pos are: ['helena', 'prospero', 'sir', 'duke', 'you', 'i', 'leontes', 'a', 'your', 'of', 'pede', 'pressing', 'presses', 'pressed', 'press', 'president', 'preserving', 'preservers', 'preserver', 'preserved']\n",
-      "The most informative terms for neg are: ['him', 's', 'iago', 'imogen', 'our', 'brutus', 'lear', 'o', 'what', 'ham', 'rom', 'thy', 'and', 'the', 'prepar', 'presses', 'pressed', 'press', 'president', 'preserving']\n",
+      "The most informative terms for pos are: ['you', 'helena', 'duke', 'prospero', 'i', 'sir', 'leontes', 'a', 'of', 'press', 'president', 'preserving', 'preservers', 'preserved', 'pressed', 'preserve', 'preservative', 'preservation', 'preserv', 'presents']\n",
+      "The most informative terms for neg are: ['him', 's', 'iago', 'imogen', 'brutus', 'o', 'lear', 'ham', 'and', 'rom', 'the', 'pressed', 'press', 'president', 'preserving', 'preserver', 'presses', 'preserved', 'preserve', 'preservative']\n",
       "----------L2 Norm-----------\n",
       "The model's average accuracy is 0.769231\n",
       "The most informative terms for pos are: ['i', 'you', 'duke', 'prospero', 'a', 'helena', 'your', 'antonio', 'sir', 'leontes', 'hermia', 'for', 'lysander', 'ariel', 'sebastian', 'demetrius', 'camillo', 'stephano', 'me', 'parolles']\n",
@@ -248,7 +251,7 @@
       "----------L1 Norm-----------\n",
       "The model's average accuracy is 0.807692\n",
       "The most informative terms for pos are: ['pray thee', 'good sir', 'thy love', 'enter duke', 'marry sir', 'good master', 'second lord', 'house enter', 'repose enter', 'repose rest', 'requires haste', 'request did', 'report th', 'request little', 'request ll', 'report thou', 'resign life', 'respect come', 'report messenger', 'respect lord']\n",
-      "The most informative terms for neg are: ['art thou', 'good night', 'exeunt scene', 'thy sons', 'castle enter', 'varro servant', 'wouldst thou', 'lord aside', 'old man', 'rest court', 'reply answer', 'report believe', 'report goes', 'report hath', 'report know', 'report messenger', 'report th', 'report thou', 'repose enter', 'repose rest']\n",
+      "The most informative terms for neg are: ['art thou', 'good night', 'exeunt scene', 'castle enter', 'thy sons', 'varro servant', 'lord aside', 'wouldst thou', 'old man', 'rest enter', 'reply answer', 'report believe', 'report goes', 'report hath', 'report know', 'report messenger', 'report th', 'report thou', 'repose enter', 'repose rest']\n",
       "----------L2 Norm-----------\n",
       "The model's average accuracy is 0.692308\n",
       "The most informative terms for pos are: ['pray thee', 'house enter', 'marry sir', 'good sir', 'enter duke', 'st thou', 'good master', 'lord duke', 'thy love', 'man hath', 'thousand ducats', 'flesh blood', 'thou shalt', 'ay sir', 'duke palace', 'sebastian antonio', 'didst thou', 'duke venice', 'sir john', 'stand aside']\n",
